--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,13 +11,17 @@ html{
 }
  
 
-.automotor {
-      
+@each $servicio in automotor, motocicleta, bicicleta 
+{
+    .#{$servicio} 
+    {
+    
+    background: url('../img/#{$servicio}.jpg') fixed;   
     width: 75%;
     height: 50vh;
-        
+       
     margin: auto;
-    background: url('../img/automotor.jpg') fixed; 
+    
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -27,13 +31,13 @@ html{
         
     align-items: center;
     justify-content: center;
-      
+    
     h1{
         display: flex;
         justify-content: center;
         font-weight: 700;
         font: $titulo-font;
-        font-size: $tamanotitulo;
+        font-size: $tamanotitulo+0.7rem;
         color: $colortitulo;
         
         }
@@ -41,7 +45,7 @@ html{
         display: flex;
         justify-content: center;
         font-weight: 700;
-        font-size: $tamanosubtitulo;
+        font-size: $tamanosubtitulo+0.5rem;
         color:orangered;
         
         }
@@ -49,7 +53,7 @@ html{
         display: flex;
         justify-content: center;
         font-weight: 700;
-        font-size: 1.5rem;
+        font-size: 1.5rem+0.1rem;
         color:$colorprincipal;
         }
     .boton{
@@ -57,10 +61,11 @@ html{
         justify-content: center;
            
         }                             
+    }
 }
 
-
-.titulo{
+.titulo
+{
     width: 90%;
     margin: auto;
     
@@ -69,145 +74,12 @@ html{
         background-color: $colorprincipal;
         color:$colortitulo;
         text-align: center;
+        font-size: 1rem+1rem;
     
     
-    }
+       }
    
 }
 
 
 
-.motocicleta {
-      
-    width: 75%;
-    height: 50vh;
-        
-    margin: auto;
-    background: url('../img/motocicleta.jpg') fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    -ms-display: flex;
-    display: flex;
-        
-    align-items: center;
-    justify-content: center;
-      
-    h1{
-        display: flex;
-        justify-content: center;
-        font-weight: 700;
-        font: $titulo-font;
-        font-size: $tamanotitulo;
-        color: $colortitulo;
-        
-        
-        }
-    h4{
-        display: flex;
-        justify-content: center;
-        font-weight: 700;
-        font-size: $tamanosubtitulo;
-        color:orangered;
-        
-        }
-    p{
-        display: flex;
-        justify-content: center;
-        font-weight: 700;
-        font-size: 1.5rem;
-        color:$colorprincipal;
-        }
-    .boton{
-        display: flex;
-        justify-content: center;
-           
-        }                             
-}
-
-
-.titulo{
-    width: 90%;
-    margin: auto;
-    
-    h2 {
-        
-        background-color: $colorprincipal;
-        color:$colortitulo;
-        text-align: center;
-    
-    
-    }
-   
-}
- 
-
-
-
-.bicicleta {
-      
-    width: 75%;
-    height: 50vh;
-        
-    margin: auto;
-    background: url('../img/bicicleta.jpg') fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    -ms-display: flex;
-    display: flex;
-        
-    align-items: center;
-    justify-content: center;
-      
-    h1{
-        display: flex;
-        justify-content: center;
-        font-weight: 700;
-        font: $titulo-font;
-        font-size: $tamanotitulo;
-        color: $colortitulo;
-        
-        }
-    h4{
-        display: flex;
-        justify-content: center;
-        font-weight: 700;
-        font-size: $tamanosubtitulo;
-        color:orangered;
-        
-        }
-    p{
-        display: flex;
-        justify-content: center;
-        font-weight: 700;
-        font-size: 1.5rem;
-        color:$colorprincipal;
-        }
-    .boton{
-        display: flex;
-        justify-content: center;
-           
-        }                             
-}
-
-
-.titulo{
-    width: 90%;
-    margin: auto;
-    
-    h2 {
-        
-        background-color: $colorprincipal;
-        color:$colortitulo;
-        text-align: center;
-    
-    
-    }
-   
-}
- 
- 
-  
