--- a/css/mainSCSS.css
+++ b/css/mainSCSS.css
@@ -9,7 +9,7 @@ html {
 .automotor {
   background: url("../img/automotor.jpg") fixed;
   width: 75%;
-  height: 50vh;
+  height: 75vh;
   margin: auto;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -45,7 +45,7 @@ html {
 .motocicleta {
   background: url("../img/motocicleta.jpg") fixed;
   width: 75%;
-  height: 50vh;
+  height: 75vh;
   margin: auto;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -81,7 +81,7 @@ html {
 .bicicleta {
   background: url("../img/bicicleta.jpg") fixed;
   width: 75%;
-  height: 50vh;
+  height: 75vh;
   margin: auto;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -122,3 +122,113 @@ html {
     color: rgba(255, 255, 255, 0.9);
     text-align: center;
     font-size: 2rem; }
+
+@media (max-width: 700px) {
+  .automotor {
+    background: url("../img/automotor.jpg") center fixed;
+    width: 75%;
+    height: 50vh;
+    margin: auto;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    -ms-display: flex;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .automotor h1 {
+      display: flex;
+      justify-content: center;
+      font-weight: 700;
+      font: normal 24px/1.5 "Open Sans", sans-serif;
+      font-size: 2.5rem;
+      color: rgba(255, 255, 255, 0.9); }
+    .automotor h4 {
+      display: flex;
+      justify-content: center;
+      font-weight: 700;
+      font-size: 1.25rem;
+      color: orangered; }
+    .automotor p {
+      display: flex;
+      justify-content: center;
+      font-weight: 700;
+      font-size: 1.5rem;
+      color: #021d53;
+      text-align: center; }
+    .automotor .boton {
+      display: flex;
+      justify-content: center; }
+  .motocicleta {
+    background: url("../img/motocicleta.jpg") center fixed;
+    width: 75%;
+    height: 50vh;
+    margin: auto;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    -ms-display: flex;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .motocicleta h1 {
+      display: flex;
+      justify-content: center;
+      font-weight: 700;
+      font: normal 24px/1.5 "Open Sans", sans-serif;
+      font-size: 2.5rem;
+      color: rgba(255, 255, 255, 0.9); }
+    .motocicleta h4 {
+      display: flex;
+      justify-content: center;
+      font-weight: 700;
+      font-size: 1.25rem;
+      color: orangered; }
+    .motocicleta p {
+      display: flex;
+      justify-content: center;
+      font-weight: 700;
+      font-size: 1.5rem;
+      color: #021d53;
+      text-align: center; }
+    .motocicleta .boton {
+      display: flex;
+      justify-content: center; }
+  .bicicleta {
+    background: url("../img/bicicleta.jpg") center fixed;
+    width: 75%;
+    height: 50vh;
+    margin: auto;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    -ms-display: flex;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .bicicleta h1 {
+      display: flex;
+      justify-content: center;
+      font-weight: 700;
+      font: normal 24px/1.5 "Open Sans", sans-serif;
+      font-size: 2.5rem;
+      color: rgba(255, 255, 255, 0.9); }
+    .bicicleta h4 {
+      display: flex;
+      justify-content: center;
+      font-weight: 700;
+      font-size: 1.25rem;
+      color: orangered; }
+    .bicicleta p {
+      display: flex;
+      justify-content: center;
+      font-weight: 700;
+      font-size: 1.5rem;
+      color: #021d53;
+      text-align: center; }
+    .bicicleta .boton {
+      display: flex;
+      justify-content: center; } }
